--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   "dependencies": {
     "react": "16.0.0-alpha.12",
     "react-native": "0.45.1",
+    "react-native-checkbox": "^1.1.0",
     "react-navigation": "^1.0.0-beta.11"
   },
   "devDependencies": {
     "babel-jest": "20.0.3",
     "babel-preset-react-native": "2.0.0",
+    "flow-bin": "^0.49.1",
     "jest": "20.0.4",
     "react-test-renderer": "16.0.0-alpha.12"
   },
